# dual-spacetime-simulator

./: .gitignore  Cargo.toml  README.md  build.rs  design_folder.md  design_overview.md
crates/dst-expand/: Cargo.toml
crates/dst-expand/src/: biquaternion.rs  coeff_format.rs  expr.rs  format.rs  lib.rs  main.rs  pga.rs  pga_expr.rs
crates/dst-expand/src/algebra/: mod.rs
crates/dst-expand/tests/: cli_pga_smoke.rs  cli_smoke.rs
crates/dst-graph3d/: Cargo.toml  build.rs
crates/dst-graph3d/src/: camera.rs  display_buffer.rs  graph3d.rs  integration.rs  lib.rs  main.rs  pipeline.rs  settings.rs  ui.rs  ui_state.rs  ui_styles.rs
crates/dst-graph3d/src/shaders/: egui_fragment.frag  egui_vertex.vert  particles_fragment.frag  particles_sphere_fragment.frag
crates/dst-graph3d/tests/: graph3d.rs
crates/dst-math/: Cargo.toml
crates/dst-math/src/: biquaternion.rs  gravity.rs  lib.rs  pga.rs  s3_galaxy.rs  spacetime.rs
crates/dst-math/tests/: math_biquaternion.rs  math_bivector.rs  math_gravity.rs  math_pga.rs  math_s3_galaxy.rs  math_spacetime.rs
crates/dual-spacetime-simulator/: Cargo.toml  build.rs
crates/dual-spacetime-simulator/src/: camera.rs  gpu_simulation.rs  graph3d.rs  initial_condition.rs  integration.rs  lib.rs  object_input.rs  particle_selection_marker.rs  particle_snapshot.rs  pipeline.rs  settings.rs  simulation.rs  solar_system_data.rs  trace_follow.rs  ui.rs  ui_state.rs  ui_styles.rs  vulkan_base.rs
crates/dual-spacetime-simulator/src/shaders/: axes_fragment.frag  particles_compute.comp  particles_sphere_fragment.frag  particles_vertex_ssbo.vert  selection_marker_vertex.vert  tree_compute.comp
crates/dual-spacetime-simulator/tests/: add_center_marker.rs  append_particles.rs  base_scale_unit.rs  camera.rs  drag_value_format.rs  dst_galaxy.rs  gpu_simulation.rs  graph3d.rs  object_input.rs  particle_selection_marker.rs  particle_snapshot.rs  scale_camera_invariant.rs  settings.rs  simulation.rs  trace_follow.rs  ui_state.rs  vulkan_base_headless.rs  vulkan_compute.rs
crates/dual-spacetime-simulator/tests/common/: mod.rs
crates/minecraft-clone/: Cargo.toml  build.rs
crates/minecraft-clone/src/: app.rs  block.rs  buffer.rs  chunk.rs  hud.rs  input.rs  main.rs  mesher.rs  player.rs  renderer.rs  texture.rs  vulkan_base.rs  world.rs  worldgen.rs
crates/minecraft-clone/src/shaders/: sky.frag  sky.vert  text.frag  text.vert  voxel.frag  voxel.vert  water.frag  water.vert
crates/pga-rocket/: Cargo.toml  README.md  build.rs
crates/pga-rocket/examples/: landing_stress.rs  target_stress.rs
crates/pga-rocket/src/: app.rs  control.rs  euclidean_pga.rs  explosion.rs  fuzzy.rs  integration.rs  landing.rs  lib.rs  main.rs  mesh.rs  renderer.rs  sim.rs  target_landing.rs  texture.rs  ui.rs
crates/pga-rocket/src/shaders/: fx.frag  fx.vert  ground.frag  ground.vert  mesh.vert
crates/pga-rocket/tests/: control.rs  explosion.rs  landing.rs  physics.rs  target_landing.rs
crates/vulkanvil/: Cargo.toml
crates/vulkanvil/src/: base.rs  buffer.rs  input.rs  lib.rs  shader.rs  spacecraft_markers.rs
crates/vulkanvil/src/camera/: mod.rs  orbit.rs  spacecraft.rs  trace.rs
crates/vulkanvil/tests/: camera.rs
docs/: DST Gravity Simulation Design.md  DST_Classical_MultiBody_Time_Delay_Guide.md  DST_Galaxy_NBody_Simulation_Rust_Instructions.md  ash_migration_plan.md  design_overview.md  double_spacetime_theory_overview.md  dst-expand-本格数式処理仕様.md
src/: camera.rs  graph3d.rs  initial_condition.rs  integration.rs  lib.rs  main.rs  pipeline.rs  render.rs  renderer.rs  settings.rs  simulation.rs  tree.rs  types.rs  ui.rs  ui_state.rs  ui_styles.rs  utils.rs  vulkan_base.rs
src/math/: biquaternion.rs  bivector.rs  graph.rs  mod.rs  spacetime.rs  tetraquaternion.rs
src/shaders/: axes_fragment.glsl  axes_vertex.glsl  axes_vertex.vert  particles_fragment.glsl  particles_vertex.glsl  tree_compute.comp  tree_fragment.frag  tree_vertex.vert  vertex.glsl
tests/: graph3d.rs  initial_condition.rs  math_biquaternion.rs  math_bivector.rs  math_spacetime.rs  settings.rs  tree.rs  ui_state.rs  vulkan_base_headless.rs
tests/common/: mod.rs
