[package]
name = "dual-spacetime-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
egui = "0.31.1"
egui-winit = { version = "0.31.1", default-features = false }
glam = "0.30.8"
num_cpus = "1.17.0"
rand = "0.8.5"
rand_distr = "0.5.1"
rayon = "1.11.0"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
winit = "0.30.12"

#[dev-dependencies]
#mockall = "0.13"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
