[workspace]
resolver = "2"
members = [
    "crates/dst-math",
    "crates/dst-expand",
    "crates/dual-spacetime-simulator",
    "crates/minecraft-clone",
    "crates/vulkanvil",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
dst-expand = { path = "crates/dst-expand" }
dst-math = { path = "crates/dst-math" }
vulkanvil = { path = "crates/vulkanvil" }
ash = { version = "0.38", features = ["loaded"] }
ash-window = "0.13"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = "0.30.8"
gpu-allocator = { version = "0.27", default-features = false, features = ["vulkan"] }
raw-window-handle = "0.6"
winit = "0.30.12"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
