[package]
name = "dual-spacetime-simulator"
version = "0.4.0"
edition.workspace = true

[lib]
name = "dual_spacetime_simulator"
path = "src/lib.rs"

[[bin]]
name = "dual-spacetime-simulator"
path = "src/main.rs"

[dependencies]
ahash = "0.8.12"
ash.workspace = true
ash-window.workspace = true
bytemuck.workspace = true
dst-math.workspace = true
egui = "0.31.1"
egui-ash-renderer = { version = "0.8", default-features = false }
egui-winit = { version = "0.31.1", default-features = false }
glam = { workspace = true, features = ["serde"] }
rfd = "0.15"
gpu-allocator.workspace = true
num_cpus = "1.17.0"
rand = "0.9.2"
rand_distr = "0.5.1"
raw-window-handle.workspace = true
rayon = "1.11.0"
satkit = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }
vulkanvil.workspace = true
winit.workspace = true
