[package]
name = "pga-rocket"
version = "0.1.0"
edition.workspace = true
description = "PGA-based legged rocket launch/landing simulator with keyboard control"

[lib]
name = "pga_rocket"
path = "src/lib.rs"

[[bin]]
name = "pga-rocket"
path = "src/main.rs"

[dependencies]
ash.workspace = true
ash-window.workspace = true
bytemuck.workspace = true
dst-math.workspace = true
glam.workspace = true
gpu-allocator.workspace = true
raw-window-handle.workspace = true
vulkanvil.workspace = true
winit.workspace = true
